--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -17,7 +17,7 @@ show_social_icons:  true
 
 # Disqus post comments
 # (leave blank to disable Disqus)
-disqus_shortname:
+disqus_shortname: joonas-fi
 
 # Social icons
 github_username: joonas-fi
