Update blog description

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -2,7 +2,7 @@
 title:       joonas.fi
 email:       joonas@joonas.fi
 author:      Joonas
-description: "My mom thinks I'm smart."
+description: "Eagles soar alone - pigeons fly in a flock."
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://joonas.fi" # the base hostname & protocol for your site
 
