Link to f61's github profile instead

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -24,7 +24,7 @@ show_social_icons:  true
 disqus_shortname: joonas-fi
 
 # Social icons
-github_username: joonas-fi
+github_username: function61
 stackoverflow_id: 2176740
 twitter_username: joonas_fi
 google_plus_id:
