Update preview mode

--- a/turbobob.json
+++ b/turbobob.json
@@ -7,6 +7,8 @@
 			"name": "default",
 			"mount_destination": "/project",
 			"dev_command": ["bash"],
+			"dev_ports": ["8084:80"],
+			"dev_pro_tips": ["For preview run $ bin/preview.sh"],
 			"pass_envs": []
 		}
 	],
