--- a/turbobob.json
+++ b/turbobob.json
@@ -5,11 +5,13 @@
 	"builders": [
 		{
 			"name": "default",
+			"dockerfile_path": "build-default.Dockerfile",
 			"mount_destination": "/project",
 			"dev_command": ["bash"],
 			"dev_ports": ["8084:80"],
 			"dev_pro_tips": ["For preview run $ bin/preview.sh"],
-			"pass_envs": []
+			"pass_envs": [],
+			"contextless_build": true
 		}
 	],
 	"docker_images": [
