add "Let’s get to work" as site description and show it in the header

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -2,7 +2,7 @@
 title:       joonas.fi
 email:       joonas@joonas.fi
 author:      Joonas
-description: "Eagles soar alone - pigeons fly in a flock."
+description: "Let’s get to work ᕕ( ᐛ )ᕗ"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://joonas.fi" # the base hostname & protocol for your site
 
