turn on show_related_posts

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -15,7 +15,7 @@ google_analytics: "UA-24122659-1"
 
 # Optional features
 animated:           true
-show_related_posts: false
+show_related_posts: true
 show_post_footers:  false
 show_social_icons:  true
 
