--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -52,7 +52,7 @@ share_hackernews: false
 markdown:     kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
-permalink:    pretty
+permalink:    '/:year/:month/:title/'
 paginate:     10
 sass:
   compressed: true
